# AppLinkDesktop

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  org.kde.applinkdesktop.desktop  org.kde.applinkdesktop.json  org.kde.applinkdesktop.metainfo.xml
android/: AndroidManifest.xml  build.gradle  version.gradle.in
po/: applinkdesktop.pot
po/fr/: applinkdesktop.po
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  applinkdesktopconfig.kcfg  applinkdesktopconfig.kcfgc  desktoplinkitem.cpp  desktoplinkitem.h  desktoplinkmodel.cpp  desktoplinkmodel.h  main.cpp  resources.qrc
src/contents/ui/: About.qml  main.qml
